--- a/app/src/main/res/layout/activity_user__profile.xml
+++ b/app/src/main/res/layout/activity_user__profile.xml
@@ -7,6 +7,37 @@
     tools:context=".User_Profile">
 
     <TextView
+        android:id="@+id/txtWins7"
+        android:layout_width="112dp"
+        android:layout_height="24dp"
+        android:text="25"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/txtGamesWon"
+        app:layout_constraintStart_toStartOf="@+id/txtGamesWon"
+        app:layout_constraintTop_toBottomOf="@+id/txtGamesWon" />
+
+    <TextView
+        android:id="@+id/txtWins9"
+        android:layout_width="112dp"
+        android:layout_height="22dp"
+        android:text="32"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/txtBestTime"
+        app:layout_constraintStart_toStartOf="@+id/txtBestTime"
+        app:layout_constraintTop_toBottomOf="@+id/txtBestTime" />
+
+    <TextView
+        android:id="@+id/txtWins"
+        android:layout_width="112dp"
+        android:layout_height="22dp"
+        android:text="720"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/txtBestScore"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="@+id/txtBestScore"
+        app:layout_constraintTop_toBottomOf="@+id/txtBestScore" />
+
+    <TextView
         android:id="@+id/txtBestScore"
         android:layout_width="121dp"
         android:layout_height="24dp"
@@ -100,7 +131,7 @@
         android:layout_width="111dp"
         android:layout_height="110dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="108dp"
         android:layout_marginEnd="8dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
@@ -119,6 +150,7 @@
         android:layout_marginTop="4dp"
         android:text="username"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
@@ -133,25 +165,13 @@
         android:cursorVisible="true"
         android:text="Title"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/txtUsername"
         tools:visibility="visible" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="80dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.973"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtBestTime"
@@ -166,5 +186,36 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/txtBestScore"
         app:layout_constraintTop_toBottomOf="@+id/txtGamesWon" />
+
+    <ImageView
+        android:id="@+id/imgToken"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_compass" />
+
+    <TextView
+        android:id="@+id/txtTokens"
+        android:layout_width="43dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="2dp"
+        android:text="1337"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@+id/imgToken"
+        app:layout_constraintStart_toEndOf="@+id/imgToken"
+        app:layout_constraintTop_toTopOf="@+id/imgToken" />
+
+    <ImageView
+        android:id="@+id/imgEdit"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_edit_white_24" />
 
 </android.support.constraint.ConstraintLayout>
