--- a/app/src/main/res/layout/activity_user__profile.xml
+++ b/app/src/main/res/layout/activity_user__profile.xml
@@ -4,21 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_profile"
     tools:context=".User_Profile">
 
-    <TextView
-        android:id="@+id/txtWins"
-        android:layout_width="112dp"
-        android:layout_height="24dp"
-        android:text="25"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/txtGamesWon"
-        app:layout_constraintStart_toStartOf="@+id/txtGamesWon"
-        app:layout_constraintTop_toBottomOf="@+id/txtGamesWon" />
+    <FrameLayout
+        android:id="@+id/frameLayout6"
+        android:layout_width="411dp"
+        android:layout_height="254dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/frameLayout7"
+        android:layout_width="match_parent"
+        android:layout_height="11dp"
+        android:layout_marginBottom="168dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/frameLayout3"
+        android:layout_width="413dp"
+        android:layout_height="290dp"
+        android:background="@drawable/background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout5"
+        android:layout_width="match_parent"
+        android:layout_height="11dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/txtTime"
@@ -32,6 +63,19 @@
         app:layout_constraintEnd_toEndOf="@+id/txtBestTime"
         app:layout_constraintStart_toStartOf="@+id/txtBestTime"
         app:layout_constraintTop_toBottomOf="@+id/txtBestTime" />
+
+    <TextView
+        android:id="@+id/txtWins"
+        android:layout_width="112dp"
+        android:layout_height="24dp"
+        android:text="25"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/txtGamesWon"
+        app:layout_constraintStart_toStartOf="@+id/txtGamesWon"
+        app:layout_constraintTop_toBottomOf="@+id/txtGamesWon" />
 
     <TextView
         android:id="@+id/txtScore"
@@ -68,7 +112,7 @@
         android:layout_width="140dp"
         android:layout_height="35dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:text="Games Won: "
         android:textAlignment="center"
@@ -76,21 +120,24 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+        app:layout_constraintTop_toTopOf="@+id/frameLayout6" />
 
     <ImageView
         android:id="@+id/imgBadge3"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgBadge2"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout7"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:srcCompat="@android:drawable/btn_star_big_on"
+        tools:srcCompat="@android:drawable/sym_def_app_icon"
         tools:visibility="visible" />
 
     <ImageView
@@ -98,14 +145,16 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imgBadge2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout7"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:srcCompat="@android:drawable/btn_star_big_on"
+        tools:srcCompat="@android:drawable/sym_def_app_icon"
         tools:visibility="visible" />
 
     <ImageView
@@ -113,15 +162,17 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imgBadge3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imgBadge1"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout7"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:srcCompat="@android:drawable/btn_star_big_on"
+        tools:srcCompat="@android:drawable/sym_def_app_icon"
         tools:visibility="visible" />
 
     <ImageView
@@ -129,7 +180,7 @@
         android:layout_width="111dp"
         android:layout_height="110dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
