--- a/app/src/main/res/layout/fragment_count_down_screen.xml
+++ b/app/src/main/res/layout/fragment_count_down_screen.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:text="Ready?"
         android:textSize="45sp"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,6 +28,7 @@
         android:layout_marginTop="15dp"
         android:text="3"
         android:textSize="60sp"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="@+id/textReady"
         app:layout_constraintStart_toStartOf="@+id/textReady"
         app:layout_constraintTop_toBottomOf="@+id/textReady" />
