--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -31,4 +31,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gameStartBtn" />
+
+    <Button
+        android:id="@+id/btnEG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="EndGame"
+        app:layout_constraintEnd_toEndOf="@+id/viewProfileBtn"
+        app:layout_constraintStart_toStartOf="@+id/viewProfileBtn"
+        app:layout_constraintTop_toBottomOf="@+id/viewProfileBtn" />
+
+
 </android.support.constraint.ConstraintLayout>
