--- a/app/src/main/res/layout/activity_endgame_screen.xml
+++ b/app/src/main/res/layout/activity_endgame_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -100,4 +101,4 @@
         app:layout_constraintTop_toTopOf="@+id/currencyNum"
         app:srcCompat="@drawable/baseline_polymer_black_24" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
