--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -17,10 +17,12 @@
         android:layout_marginEnd="64dp"
         android:background="@drawable/rounded_button"
         android:text="Quick Finger Challenge"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gameStartBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/gameStartBtn"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/gameStartBtn"
@@ -32,9 +34,11 @@
         android:layout_marginEnd="64dp"
         android:background="@drawable/rounded_button"
         android:text="Campaign"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/viewProfileBtn"
@@ -44,9 +48,11 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="View Profile"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gameStartBtn2" />
+        app:layout_constraintTop_toBottomOf="@id/gameStartBtn2"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/btnEG"
@@ -57,6 +63,14 @@
         app:layout_constraintEnd_toEndOf="@+id/viewProfileBtn"
         app:layout_constraintStart_toStartOf="@+id/viewProfileBtn"
         app:layout_constraintTop_toBottomOf="@+id/viewProfileBtn" />
+
+    <Button
+        android:id="@+id/btnlogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="129dp"
+        tools:layout_editor_absoluteY="36dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
